--- a/Appveyor.yml
+++ b/Appveyor.yml
@@ -2,7 +2,7 @@ version: 1.0.{build}
 image: Visual Studio 2019
 platform: Any CPU
 build:
-  project: '**/ApiKeyAuth.csproj'
+  project: '**/src/ApiKeyAuth.csproj'
   publish_nuget: true
   verbosity: detailed
 test: off
