--- a/Appveyor.yml
+++ b/Appveyor.yml
@@ -24,6 +24,8 @@ before_build:
   - ps: gitversion /l console /output buildserver /updateAssemblyInfo /b $env:APPVEYOR_REPO_BRANCH
 
 build:
+   project: ./src/ApiKeyAuth/ApiKeyAuth.csproj
+ - verbosity: detailed
  - cmd: dotnet pack ./src/ApiKeyAuth/ApiKeyAuth.csproj
 
 after_build:
