--- a/Appveyor.yml
+++ b/Appveyor.yml
@@ -19,14 +19,11 @@ assembly_info:
   patch: true
 
 before_build:
-  - cmd: dotnet --version
   - nuget restore DotNetApiKeyAuth.sln
   - ps: gitversion /l console /output buildserver /updateAssemblyInfo /b $env:APPVEYOR_REPO_BRANCH
 
 build:
-   project: DotNetApiKeyAuth.sln
- - verbosity: detailed
- - cmd: dotnet pack ./src/ApiKeyAuth/ApiKeyAuth.csproj
+  project: DotNetApiKeyAuth.sln
 
 after_build:
   - cmd: nuget pack ApiKeyAuth.nuspec -Version "%GitVersion_NuGetVersion%" -Prop "target=%CONFIGURATION%"
@@ -34,7 +31,13 @@ after_build:
 artifacts:
   - path: '*.nupkg'
     name: NuGet
-clone_depth: 1
-on_finish :
-  # any cleanup in here
-deploy: off
+
+deploy:
+  - provider: Environment
+    name: PreRelease NuGet Feed
+    on:
+      branch: master
+  - provider: Environment
+    name: Public NuGet Feed
+    on:
+      appveyor_repo_tag: true
