--- a/Appveyor.yml
+++ b/Appveyor.yml
@@ -1,13 +1,11 @@
-version: '{build}'
+version: '0.1.2-beta-{build}'
+platform: Any CPU
+configuration: Release
+
 image: Visual Studio 2017
 configuration: Release
 pull_requests:
   do_not_increment_build_number: false
-
-nuget:
-  account_feed: false
-  project_feed: false
-  disable_publish_on_pr: true
 
 cache:
   - packages -> **\packages.config
@@ -19,25 +17,7 @@ assembly_info:
   patch: true
 
 before_build:
-  - nuget restore DotNetApiKeyAuth.sln
-  - ps: gitversion /l console /output buildserver /updateAssemblyInfo /b $env:APPVEYOR_REPO_BRANCH
-
+  - dotnet restore DotNetApiKeyAuth.sln
+  - dotnet restore .\tests\ApiKeyAuth.Tests
 build:
   project: DotNetApiKeyAuth.sln
-
-after_build:
-  - cmd: dotnet pack ".\src\ApiKeyAuth\ApiKeyAuth.csproj" -c %CONFIGURATION% -o ..\artifacts
-
-artifacts:
-  - path: '*.nupkg'
-    name: NuGet
-
-deploy:
-  - provider: Environment
-    name: PreRelease NuGet Feed
-    on:
-      branch: master
-  - provider: Environment
-    name: Public NuGet Feed
-    on:
-      appveyor_repo_tag: true
