--- a/Appveyor.yml
+++ b/Appveyor.yml
@@ -2,6 +2,7 @@ version: 1.0.{build}
 image: Visual Studio 2019
 configuration: Release
 platform: Any CPU
+
 dotnet_csproj:
   patch: true
   file: '**\*.csproj'
@@ -11,8 +12,13 @@ dotnet_csproj:
   assembly_version: '{version}'
   file_version: '{version}'
   informational_version: '{version}'
+
+before_build:
+  - dotnet restore  
+
 build:
   publish_nuget: true
   parallel: true
   verbosity: detailed
+
 test: off
