--- a/Appveyor.yml
+++ b/Appveyor.yml
@@ -2,7 +2,6 @@ version: 1.0.{build}
 image: Visual Studio 2019
 configuration: Release
 platform: Any CPU
-
 dotnet_csproj:
   patch: true
   file: '**\*.csproj'
@@ -12,13 +11,11 @@ dotnet_csproj:
   assembly_version: '{version}'
   file_version: '{version}'
   informational_version: '{version}'
-
 before_build:
-  - dotnet restore  
-
+- ps: dotnet restore
 build:
+  project: '**/src/ApiKeyAuth.csproj'
   publish_nuget: true
   parallel: true
   verbosity: detailed
-
 test: off
