--- a/Appveyor.yml
+++ b/Appveyor.yml
@@ -12,11 +12,13 @@ dotnet_csproj:
   assembly_version: '{version}'
   file_version: '{version}'
   informational_version: '{version}'
+
 before_build:
-- ps: dotnet restore
+  - dotnet restore  
+
 build:
-  project: '**/src/ApiKeyAuth.csproj'
   publish_nuget: true
   parallel: true
   verbosity: detailed
+
 test: off
