--- a/Appveyor.yml
+++ b/Appveyor.yml
@@ -12,7 +12,7 @@ dotnet_csproj:
 before_build:
 - ps: dotnet restore
 build:
-  project: '**/ApiKeyAuth.csproj'
+  project: '**\ApiKeyAuth.csproj'
   publish_nuget: true
   parallel: true
   verbosity: detailed
